*python-dice-3.1.0 (17 Dec 2019)

  17 Dec 2019;  <chymera@gentoo.org> +python-dice-3.1.0.ebuild,
  -python-dice-2.4.2.ebuild, -python-dice-3.0.0.ebuild:
  app-misc/python-dice: new package ahead of gentoo main

*python-dice-3.0.0 (06 Dec 2019)

  06 Dec 2019;  <chymera@gentoo.org> +python-dice-3.0.0.ebuild:
  app-misc/python-dice: version bump 3.0.0

  04 Dec 2019;  <chymera@gentoo.org> python-dice-2.4.2.ebuild:
  app-misc/python-dice: updated dependency lists

  04 Nov 2019;  <chymera@gentoo.org> typing-3.7.4.1.ebuild:
  dev-python/typing: KEYWORDS

*typing-3.7.4.1 (09 Oct 2019)

  09 Oct 2019;  <chymera@gentoo.org> +metadata.xml, +typing-3.7.4.1.ebuild:
  dev-python/typing: version bump 3.7.4.1  and PYTHON_COMPAT to 3 series