@@ -1,9 +1,9 @@
-# Copyright 1999-2019 Gentoo Authors
+# Copyright 1999-2020 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
 EAPI=7
 
-PYTHON_COMPAT=( python3_6 )
+PYTHON_COMPAT=( python3_{6,7,8} )
 
 inherit distutils-r1
 
@@ -17,7 +17,6 @@ KEYWORDS="~amd64"
 IUSE="test"
 
 DEPEND="test? (
-	dev-python/coverage[${PYTHON_USEDEP}]
 	dev-python/pytest[${PYTHON_USEDEP}]
 	)
 "
@@ -33,6 +32,4 @@ src_prepare() {
 	default
 }
 
-python_test() {
-	pytest -vv || die
-}
+distutils_enable_tests pytest
