@@ -1,3 +1,6 @@
+  12 May 2020;  <chymera@gentoo.org> python-dice-3.1.0.ebuild:
+  app-misc/python-dice: improved test support
+
 *python-dice-3.1.0 (17 Dec 2019)
 
   17 Dec 2019;  <chymera@gentoo.org> +python-dice-3.1.0.ebuild,
